[#37] 11/12 서주리 teams 팀 정보 수정 api추가, teams rest API 적용, reservations wrapAsyncController 적용
